[GEOMETRY-54] - Cleanup Checkstyle Reported issues